Added import all images from folder
